--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\sri vigneswara\\Downloads\\fontawesomefx-8.9.jar
+file.reference.jar_files.zip=C:\\Users\\sri vigneswara\\Downloads\\jar_files.zip
 file.reference.jfoenix-1.6.0.jar=C:\\Users\\sri vigneswara\\Downloads\\jfoenix-1.6.0.jar
+file.reference.mysql-connector.jar.zip=C:\\Users\\sri vigneswara\\Downloads\\mysql-connector.jar.zip
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +41,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.jfoenix-1.6.0.jar}
+    ${file.reference.jfoenix-1.6.0.jar}:\
+    ${file.reference.jar_files.zip}:\
+    ${file.reference.mysql-connector.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
