--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\sri vigneswara\\Downloads\\fontawesomefx-8.9.jar
 file.reference.jar_files.zip=C:\\Users\\sri vigneswara\\Downloads\\jar_files.zip
 file.reference.jfoenix-1.6.0.jar=C:\\Users\\sri vigneswara\\Downloads\\jfoenix-1.6.0.jar
-file.reference.mysql-connector.jar.zip=C:\\Users\\sri vigneswara\\Downloads\\mysql-connector.jar.zip
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\sri vigneswara\\Downloads\\New folder\\mysql-connector-java-8.0.23.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,7 +43,7 @@ javac.classpath=\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.jfoenix-1.6.0.jar}:\
     ${file.reference.jar_files.zip}:\
-    ${file.reference.mysql-connector.jar.zip}
+    ${file.reference.mysql-connector-java-8.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
